lab/iac/main.tf
terraform {
  required_providers {
    azurerm = {
      source  = "hashicorp/azurerm"
      version = "~> 4.0"
    }
  }
}

provider "azurerm" {
  features {}
}

resource "azurerm_resource_group" "lab" {
  name     = "rg-devsecops-lab"
  location = "brazilsouth"
}

resource "azurerm_network_security_group" "lab" {
  name                = "nsg-devsecops-lab"
  location            = azurerm_resource_group.lab.location
  resource_group_name = azurerm_resource_group.lab.name

  security_rule {
    name                   = "allow-ssh"
    priority               = 100
    direction              = "Inbound"
    access                 = "Allow"
    protocol               = "Tcp"
    source_port_range      = "*"
    destination_port_range = "22"

    # VULNERAVEL: "*" libera SSH para a internet inteira (CKV_AZURE_10)
    # source_address_prefix = "*"

    # CORRECAO: comente a linha acima e descomente a linha abaixo.
    # Restringe o SSH a uma faixa interna conhecida.
    source_address_prefix = "10.0.0.0/24"

    destination_address_prefix = "*"
  }
}
